Corect `popper.js` link

--- a/src/views/includes/files/_scripts.pug
+++ b/src/views/includes/files/_scripts.pug
@@ -6,8 +6,8 @@ block external-js
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous")
   script(
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper-utils.min.js"
-    integrity="sha256-9qJYbX/a40w/bDtAV2xO86azgaFwK0xT2Nc/r5LrTRM="
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha256-WHwIASWxNdKakx7TceUP/BqWQYMcEIfeLNdFMoFfRWA="
     crossorigin="anonymous")
   script(
     src="https://cdnjs.cloudflare.com/ajax/libs/lozad.js/1.7.0/lozad.min.js"
