--- a/src/scss/unikorn/components/_pagination.scss
+++ b/src/scss/unikorn/components/_pagination.scss
@@ -66,6 +66,9 @@
     background-color: $pagination-disabled-bg;
     color: $pagination-disabled-color;
     pointer-events: none;
+
+    // Opinionated: remove the "hand" cursor set previously for .page-link
+    cursor: auto;
   }
 }
 
