--- a/src/scss/unikorn/globals/_utilities.scss
+++ b/src/scss/unikorn/globals/_utilities.scss
@@ -10,6 +10,7 @@
 @import "../utilities/embed";
 @import "../utilities/flex";
 @import "../utilities/float";
+@import "../utilities/overflow";
 @import "../utilities/position";
 @import "../utilities/screenreaders";
 @import "../utilities/shadows";
