--- a/src/scss/unikorn/components/_badge.scss
+++ b/src/scss/unikorn/components/_badge.scss
@@ -17,6 +17,12 @@
   vertical-align: baseline;
   @include border-radius($badge-border-radius);
 
+  @at-root a#{&} {
+    @include hover-focus {
+      text-decoration: none;
+    }
+  }
+
   // Empty badges collapse automatically
   &:empty {
     display: none;
