--- a/src/scss/unikorn/components/_card.scss
+++ b/src/scss/unikorn/components/_card.scss
@@ -71,6 +71,7 @@
   margin-bottom: 0; // Removes the default margin-bottom of <hN>
   border-bottom: $card-border-width solid $card-border-color;
   background-color: $card-cap-bg;
+  color: $card-cap-color;
 
   &:first-child {
     @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
@@ -154,9 +155,9 @@
 
     .card {
       display: flex;
-      flex-direction: column;
 
       // Flexbugs #4: https://github.com/philipwalton/flexbugs#4-flex-shorthand-declarations-with-unitless-flex-basis-values-are-ignored
+      flex-direction: column;
       flex: 1 0 0%;
       margin-right: $card-deck-margin;
       margin-bottom: 0; // Override the default
@@ -274,25 +275,33 @@
 // Accordion
 // ----------------------------
 .accordion {
-  .card:not(:first-of-type):not(:last-of-type) {
-    border-bottom: 0;
-    border-radius: 0;
-  }
+  .card {
+    overflow: hidden;
 
-  .card:not(:first-of-type) {
-    .card-header:first-child {
-      border-radius: 0;
+    &:not(:first-of-type) {
+      .card-header:first-child {
+        border-radius: 0;
+      }
+
+      &:not(:last-of-type) {
+        border-bottom: 0;
+        border-radius: 0;
+      }
     }
-  }
 
-  .card:first-of-type {
-    border-bottom: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
+    &:first-of-type {
+      border-bottom: 0;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
 
-  .card:last-of-type {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    &:last-of-type {
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+
+    .card-header {
+      margin-bottom: -$card-border-width;
+    }
   }
 }
