--- a/src/scss/unikorn/components/_dropdown.scss
+++ b/src/scss/unikorn/components/_dropdown.scss
@@ -40,9 +40,26 @@
   @include box-shadow($dropdown-box-shadow);
 }
 
-.dropdown-menu-right {
-  right: 0;
-  left: auto;
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+    .dropdown-menu#{$infix}-right {
+      right: 0;
+      left: auto;
+    }
+  }
+}
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+    .dropdown-menu#{$infix}-left {
+      right: auto;
+      left: 0;
+    }
+  }
 }
 
 
@@ -98,7 +115,7 @@
 }
 
 // When enabled Popper.js, reset basic dropdown position
-// stylelint-disable no-duplicate-selectors
+// stylelint-disable-next-line no-duplicate-selectors
 .dropdown-menu {
   &[x-placement^="top"],
   &[x-placement^="right"],
@@ -108,7 +125,6 @@
     bottom: auto;
   }
 }
-// stylelint-enable no-duplicate-selectors
 
 
 // Dividers (basically an `<hr>`) within the dropdown
@@ -133,6 +149,14 @@
   white-space: nowrap; // prevent links from randomly breaking onto new lines
   clear: both;
 
+  &:first-child {
+    @include border-top-radius($dropdown-inner-border-radius);
+  }
+
+  &:last-child {
+    @include border-bottom-radius($dropdown-inner-border-radius);
+  }
+
   @include hover-focus {
     color: $dropdown-link-hover-color;
     text-decoration: none;
@@ -151,6 +175,7 @@
   &:disabled {
     background-color: transparent;
     color: $dropdown-link-disabled-color;
+    pointer-events: none;
     @if $enable-gradients {
       background-image: none;
     }
