--- a/src/scss/unikorn/components/_list-group.scss
+++ b/src/scss/unikorn/components/_list-group.scss
@@ -69,6 +69,7 @@
   &:disabled {
     background-color: $list-group-disabled-bg;
     color: $list-group-disabled-color;
+    pointer-events: none;
   }
 
   // Include both here for `<a>`s and `<button>`s
@@ -90,6 +91,10 @@
     border-right: 0;
     border-left: 0;
     @include border-radius(0);
+
+    &:last-child {
+      margin-bottom: -$list-group-border-width;
+    }
   }
 
   &:first-child {
@@ -100,6 +105,7 @@
 
   &:last-child {
     .list-group-item:last-child {
+      margin-bottom: 0;
       border-bottom: 0;
     }
   }
