--- a/src/scss/unikorn/components/_nav.scss
+++ b/src/scss/unikorn/components/_nav.scss
@@ -25,6 +25,8 @@
   // Disabled state lightens text
   &.disabled {
     color: $nav-link-disabled-color;
+    pointer-events: none;
+    cursor: default;
   }
 }
 
