--- a/src/scss/unikorn/globals/_print.scss
+++ b/src/scss/unikorn/globals/_print.scss
@@ -2,7 +2,7 @@
 // Print styles.
 // ============================================================================
 // Inlined to avoid the additional HTTP request:
-// http://www.phpied.com/delay-loading-your-print-css/
+// https://www.phpied.com/delay-loading-your-print-css/
 //
 // Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css
 // stylelint-disable declaration-no-important, selector-no-qualifying-type
@@ -88,9 +88,11 @@
     @page {
       size: $print-page-size;
     }
+
     body {
       min-width: $print-body-min-width !important;
     }
+
     .container {
       min-width: $print-body-min-width !important;
     }
@@ -99,6 +101,7 @@
     .navbar {
       display: none;
     }
+
     .badge {
       border: $border-width solid #000;
     }
@@ -111,11 +114,28 @@
         background-color: #fff !important;
       }
     }
+
     .table-bordered {
       th,
       td {
         border: 1px solid #ddd !important;
       }
+    }
+
+    .table-dark {
+      color: inherit;
+
+      th,
+      td,
+      thead th,
+      tbody + tbody {
+        border-color: $table-border-color;
+      }
+    }
+
+    .table .thead-dark th {
+      border-color: $table-border-color;
+      color: inherit;
     }
 
     // UniKorn specific changes end
