--- a/src/scss/unikorn/mixins/components/_list-group.scss
+++ b/src/scss/unikorn/mixins/components/_list-group.scss
@@ -18,7 +18,7 @@
       &.active {
         border-color: $color;
         background-color: $color;
-        color: #fff;
+        color: $white;
       }
     }
   }
