--- a/src/scss/unikorn/mixins/components/_pagination.scss
+++ b/src/scss/unikorn/mixins/components/_pagination.scss
@@ -7,18 +7,19 @@
   .page-link {
     padding: $padding-y $padding-x;
     font-size: $font-size;
+    line-height: $line-height;
   }
 
   .page-item {
     &:first-child {
       .page-link {
-        @include border-left-radius($pag-border-radius);
+        @include border-left-radius($border-radius);
       }
     }
 
     &:last-child {
       .page-link {
-        @include border-right-radius($pag-border-radius);
+        @include border-right-radius($border-radius);
       }
     }
   }
