--- a/src/scss/unikorn/mixins/skins/_transition.scss
+++ b/src/scss/unikorn/mixins/skins/_transition.scss
@@ -3,7 +3,6 @@
 // ============================================================================
 
 // Transition.
-// If `$enable-transitions` is `true`, create transition.
 @mixin transition($transition...) {
   @if $enable-transitions {
     @if length($transition) == 0 {
@@ -13,7 +12,9 @@
     }
   }
 
-  @media screen and (prefers-reduced-motion: reduce) {
-    transition: none;
+  @if $enable-prefers-reduced-motion-media-query {
+    @media screen and (prefers-reduced-motion: reduce) {
+      transition: none;
+    }
   }
 }
