--- a/src/scss/unikorn/mixins/utilities/_text-emphasis.scss
+++ b/src/scss/unikorn/mixins/utilities/_text-emphasis.scss
@@ -11,7 +11,7 @@
   }
   a#{$parent} {
     @include hover-focus {
-      color: darken($color, 10%) !important;
+      color: darken($color, $emphasized-link-hover-darken-percentage) !important;
     }
   }
 }
