--- a/src/scss/unikorn/utilities/_screenreaders.scss
+++ b/src/scss/unikorn/utilities/_screenreaders.scss
@@ -2,10 +2,8 @@
 // Utilities - Screenreaders
 // ============================================================================
 
-.sr-only {
-  @include sr-only();
-}
-
-.sr-only-focusable {
-  @include sr-only-focusable();
-}
+// stylelint-disable declaration-no-important
+.shadow-sm { box-shadow: $box-shadow-sm !important; }
+.shadow { box-shadow: $box-shadow !important; }
+.shadow-lg { box-shadow: $box-shadow-lg !important; }
+.shadow-none { box-shadow: none !important; }
