--- a/src/scss/unikorn/utilities/_text.scss
+++ b/src/scss/unikorn/utilities/_text.scss
@@ -10,6 +10,7 @@
 // Alignment
 // ----------------------------
 .text-justify  { text-align: justify !important; }
+.text-wrap     { white-space: normal !important; }
 .text-nowrap   { white-space: nowrap !important; }
 .text-truncate { @include text-truncate; }
 
@@ -33,14 +34,16 @@
 
 // Weight and italics
 // ----------------------------
-.font-weight-light  { font-weight: $font-weight-light !important; }
-.font-weight-normal { font-weight: $font-weight-normal !important; }
-.font-weight-bold   { font-weight: $font-weight-bold !important; }
-.font-italic        { font-style: italic !important; }
+.font-weight-light   { font-weight: $font-weight-light !important; }
+.font-weight-lighter { font-weight: $font-weight-lighter !important; }
+.font-weight-normal  { font-weight: $font-weight-normal !important; }
+.font-weight-bold    { font-weight: $font-weight-bold !important; }
+.font-weight-bolder  { font-weight: $font-weight-bolder !important; }
+.font-italic         { font-style: italic !important; }
 
 // Contextual colors
 // ----------------------------
-.text-white { color: #fff !important; }
+.text-white { color: $white !important; }
 
 @each $color, $value in $theme-colors {
   @include text-emphasis-variant(".text-#{$color}", $value);
@@ -55,5 +58,11 @@
 // Misc
 // ----------------------------
 .text-hide {
-  @include text-hide();
+  @include text-hide($ignore-warning: true);
 }
+
+.text-decoration-none { text-decoration: none !important; }
+
+// Reset
+// ----------------------------
+.text-reset { color: inherit !important; }
