Fix navbar button

--- a/src/scss/unikorn/core/_reset.scss
+++ b/src/scss/unikorn/core/_reset.scss
@@ -100,14 +100,14 @@ p {
 
 // Abbreviations
 //
-// 1. Remove the bottom border in Firefox 39-.
+// 1. Duplicate behavior to the data-* attribute for our tooltip plugin
 // 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 // 3. Add explicit cursor to indicate changed behavior.
 // 4. Remove the bottom border in Firefox 39-.
 // 5. Prevent the text-decoration to be skipped.
 abbr[title],
-abbr[data-original-title] { // 4
-  border-bottom: 0; // 1
+abbr[data-original-title] { // 1
+  border-bottom: 0; // 4
   text-decoration: underline; // 2
   text-decoration: underline dotted; // 2
   cursor: help; // 3
@@ -239,7 +239,7 @@ img {
   vertical-align: middle;
 }
 
-svg:not(:root) {
+svg {
   overflow: hidden; // Hide the overflow in IE10/11
   vertical-align: middle;
 }
