--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -11,15 +11,15 @@
   .form-inline {
     justify-content: center;
 
-    @media (min-width: 576px) {
-      .form-group {
-        flex: 0 0 33%;
-      }
+    // @media (min-width: 576px) {
+    //   .form-group {
+    //     flex: 0 0 33%;
+    //   }
 
-      .form-control {
-        width: 100%;
-      }
-    }
+    //   .form-control {
+    //     width: 100%;
+    //   }
+    // }
   }
 
   // .form-group {
