--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,5 +19,6 @@
 @import "components/content";
 @import "components/cards";
 @import "components/parallax";
+@import "components/tags";
 @import "components/footer";
 @import "components/misc";
