--- a/src/views/includes/footer/_footer.pug
+++ b/src/views/includes/footer/_footer.pug
@@ -1,10 +1,8 @@
 //- includes/footer/_footer.pug
 footer.footer#footer
-  //- picture
-  //-   source(type="image/webp" srcset="images/hero-unit/grass_field_dawn.webp")
-  //-   source(type="image/jpeg" srcset="images/hero-unit/grass_field_dawn.jpg")
-  //-   img.img-fluid(src="images/hero-unit/grass_field_dawn.jpg" alt="Card image cap")
   .footer-container.text-center
+    .footer-tags
+      include _footer-tags
     .footer-cta
       include _footer-call-to-action
     //- .footer-news
