--- a/src/views/layout/_layout.pug
+++ b/src/views/layout/_layout.pug
@@ -8,14 +8,14 @@ html(lang="en" itemscope itemtype="http://schema.org/LocalBusiness" prefix="og: 
     block head
       include ../includes/head/_head
       include ../includes/head/_statics
-      include ../includes/head/_opengraph
+      //- include ../includes/head/_opengraph
     block fonts
       include ../includes/files/_fonts
     block styles
       include ../includes/files/_styles
     block head-js
       //- include ../includes/head/_tagmanager
-      include ../includes/head/_analytics
+      //- include ../includes/head/_analytics
 
   body
     //- include ../includes/head/_facebook-sdk
