--- a/src/scss/components/_tags.scss
+++ b/src/scss/components/_tags.scss
@@ -4,17 +4,17 @@
 
 .tags {
   float: left;
-  padding-top: 10px;
+  padding-top: .75rem;
 
   .button {
     display: inline-block;
-    padding: 8px;
-    margin: 18px 10px 0;
+    padding: .5rem;
+    margin: 1rem .5rem 0;
     border: none;
     border-radius: 3px;
     background-color: #303030;
     color: #fefefe;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 700;
   }
 
