--- a/src/views/includes/sections/_technologies.pug
+++ b/src/views/includes/sections/_technologies.pug
@@ -1,19 +1,24 @@
 //- includes/sections/_technologies.pug
 section.technologies.text-center#technologies
-  h2.mb-4 Technologies we work with
-  .tech-logos
-    img(alt="image" title="WordPress" src="images/tech/wordpress.svg")
-    img(alt="image" title="php" src="images/tech/php.svg")
-    img(alt="image" title="MySQL" src="images/tech/mysql.svg" style="width:70px;margin-top:-20px;")
-    img(alt="image" title="HTML5" src="images/tech/html5.svg" style="width:30px;opacity:0.3;")
-    img(alt="image" title="Javascript" src="images/tech/javascript.svg")
-    img(alt="image" title="AngularJS" src="images/tech/angular.svg" style="opacity:0.25;")
-    img(alt="image" title="NodeJS" src="images/tech/nodejs.svg" style="opacity:0.7;")
-    img(alt="image" title="Firebase" src="images/tech/firebase.svg")
-    br
-    img(alt="image" title="VueJS" src="images/tech/vue.svg" style="width:35px;")
-    img(alt="image" title="Webpack" src="images/tech/webpack.svg")
-    img(alt="image" title="ElectonJS" src="images/tech/electron.svg" style="opacity:0.5;")
-    img(alt="image" title="Adobe After Effects CC" src="images/tech/aftereffects.svg" style="opacity:0.4;")
-    img(alt="image" title="MongoDB" src="images/tech/mongodb.svg" style="width:120px;opacity:0.5;")
-    img(alt="image" title="Amazon Web Services" src="images/tech/aws.svg" style="width:100px;")
+  .container
+    .row
+      .col-12
+        h2.mb-4 Technologies we work with
+    .row
+      .col-12
+        .tech-logos
+          img(alt="image" title="WordPress" src="images/tech/wordpress.svg")
+          img(alt="image" title="php" src="images/tech/php.svg")
+          img(alt="image" title="MySQL" src="images/tech/mysql.svg" style="width:70px;margin-top:-20px;")
+          img(alt="image" title="HTML5" src="images/tech/html5.svg" style="width:30px;opacity:0.3;")
+          img(alt="image" title="Javascript" src="images/tech/javascript.svg")
+          img(alt="image" title="AngularJS" src="images/tech/angular.svg" style="opacity:0.25;")
+          img(alt="image" title="NodeJS" src="images/tech/nodejs.svg" style="opacity:0.7;")
+          img(alt="image" title="Firebase" src="images/tech/firebase.svg")
+          br
+          img(alt="image" title="VueJS" src="images/tech/vue.svg" style="width:35px;")
+          img(alt="image" title="Webpack" src="images/tech/webpack.svg")
+          img(alt="image" title="ElectonJS" src="images/tech/electron.svg" style="opacity:0.5;")
+          img(alt="image" title="Adobe After Effects CC" src="images/tech/aftereffects.svg" style="opacity:0.4;")
+          img(alt="image" title="MongoDB" src="images/tech/mongodb.svg" style="width:120px;opacity:0.5;")
+          img(alt="image" title="Amazon Web Services" src="images/tech/aws.svg" style="width:100px;")
