--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -44,7 +44,7 @@
     width: 40px;
     max-width: 100%;
     height: auto;
-    margin: 0 30px 35px 0;
+    margin: 1rem;
     border: none;
     border-radius: 0;
     opacity: .5;
