Update tech icons

--- a/src/views/includes/sections/_technologies.pug
+++ b/src/views/includes/sections/_technologies.pug
@@ -9,7 +9,7 @@ section.technologies.text-center#technologies
         .tech-logos
           img(alt="image" title="WordPress" src="images/tech/wordpress.svg")
           img(alt="image" title="php" src="images/tech/php.svg")
-          img(alt="image" title="MySQL" src="images/tech/mysql.svg" style="width:70px;margin-top:-20px;")
+          img(alt="image" title="MySQL" src="images/tech/mysql.svg" style="width:70px;margin-top:-.25rem;")
           img(alt="image" title="HTML5" src="images/tech/html5.svg" style="width:30px;opacity:0.3;")
           img(alt="image" title="Javascript" src="images/tech/javascript.svg")
           img(alt="image" title="AngularJS" src="images/tech/angular.svg" style="opacity:0.25;")
