refactor(views): change pug files structure

--- a/src/views/info.pug
+++ b/src/views/info.pug
@@ -1,5 +1,5 @@
 //- info.pug
-extends layout/_layout
+extends layout/_base
 
 prepend setting
   - title = 'Adorade - Info';
@@ -7,4 +7,4 @@ prepend setting
   - currentUrl = 'info.html';
 
 block header
-  include includes/header/_header
+  include modules/header/_header
