--- a/src/views/modules/drawer/_drawer.pug
+++ b/src/views/modules/drawer/_drawer.pug
@@ -1,4 +1,4 @@
-//- includes/drawer/_drawer.pug
+//- modules/drawer/_drawer.pug
 include ../../mixins/_drawer
 
 .drawer.fade#drawer(tabindex="-1" role="dialog" aria-hidden="true")
@@ -21,4 +21,4 @@ include ../../mixins/_drawer
           //- li.nav-item: a.nav-link(href="#!") #[span.fa-li #[i.fas.fa-image.fa-fw]] Portfolio
           //- li.nav-item: a.nav-link(href="#!") #[span.fa-li #[i.fas.fa-envelope.fa-fw]] Contact
       .drawer-footer
-        include ../misc/_copyright
+        include ../../includes/misc/_copyright
