--- a/src/views/modules/footer/_footer.pug
+++ b/src/views/modules/footer/_footer.pug
@@ -1,12 +1,11 @@
-//- includes/footer/_footer.pug
+//- modules/footer/_footer.pug
 footer.footer#footer
   .footer-container.text-center
     .footer-tags
       include _footer-tags
     .footer-cta
       include _footer-call-to-action
-    //- .footer-news
     .footer-social
       include _footer-social
     .footer-legal
-      include ../misc/_copyright
+      include ../../includes/misc/_copyright
