--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -1,4 +1,4 @@
-//- includes/head/_analytics.pug
+//- partials/_analytics.pug
 // Global site tag (gtag.js) - Google Analytics
 script(async src="https://www.googletagmanager.com/gtag/js?id=UA-51609485-12")
 script.
