--- a/src/views/partials/_fonts.pug
+++ b/src/views/partials/_fonts.pug
@@ -1,4 +1,4 @@
-//- includes/head/_fonts.pug
+//- partials/_fonts.pug
 // Fonts CSS File
 link(
   rel="preload" href="https://fonts.googleapis.com/css?family=Aclonica%7CRoboto"
