--- a/src/views/partials/_opengraph.pug
+++ b/src/views/partials/_opengraph.pug
@@ -1,4 +1,4 @@
-//- includes/head/_opengraph.pug
+//- partials/_opengraph.pug
 //- Schema.org
 // Schema.org markup for Google+
 meta(itemprop="name" content="Adorade - Web Design Company")
