--- a/src/views/partials/_stamp.pug
+++ b/src/views/partials/_stamp.pug
@@ -1,4 +1,4 @@
-//- includes/head/_stamp.pug
+//- partials/_stamp.pug
 //
        /\        |      since 2010      |
       /  \    ___|  ___   ___  ___   ___|  __
