--- a/src/views/partials/_statics.pug
+++ b/src/views/partials/_statics.pug
@@ -1,4 +1,4 @@
-//- includes/head/_statics.pug
+//- partials/_statics.pug
 //- Generate using http://realfavicongenerator.net/
 //- FAVICONS
 // Favicon for Website, Andoid and iOS
