--- a/src/views/story.pug
+++ b/src/views/story.pug
@@ -1,5 +1,5 @@
 //- story.pug
-extends layout/_layout
+extends layout/_base
 
 prepend setting
   - title = 'Adorade - Story';
@@ -7,4 +7,4 @@ prepend setting
   - currentUrl = 'story.html';
 
 block header
-  include includes/header/_header
+  include modules/header/_header
