--- a/src/views/contact.pug
+++ b/src/views/contact.pug
@@ -1,5 +1,5 @@
 //- contact.pug
-extends layout/_layout
+extends layout/_base
 
 prepend setting
   - title = 'Adorade - Contact';
@@ -7,4 +7,4 @@ prepend setting
   - currentUrl = 'contact.html';
 
 block header
-  include includes/header/_header
+  include modules/header/_header
