--- a/src/views/partials/_tagmanager.pug
+++ b/src/views/partials/_tagmanager.pug
@@ -1,4 +1,4 @@
-//- includes/head/_tagmanager.pug
+//- partials/_tagmanager.pug
 // Google Tag Manager
 script.
   (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
