--- a/src/views/portfolio.pug
+++ b/src/views/portfolio.pug
@@ -1,5 +1,5 @@
 //- portfolio.pug
-extends layout/_layout
+extends layout/_base
 
 prepend setting
   - title = 'Adorade - Portfolio';
@@ -7,4 +7,4 @@ prepend setting
   - currentUrl = 'portfolio.html';
 
 block header
-  include includes/header/_header
+  include modules/header/_header
