refactor(footer): change get-in-touch phrase

--- a/src/views/modules/footer/_footer-call-to-action.pug
+++ b/src/views/modules/footer/_footer-call-to-action.pug
@@ -3,6 +3,5 @@
   .row
     .col-lg-8.offset-lg-2
       p.lead.mb-5.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis et doloribus ipsam cum, molestias assumenda,
-        aliquid dolorem tempora nostrum magnam.
+        Interested working together? We are here to answer any question you may have about our services. Reach out to us and we'll do our best to find the right solution for you.
       p.text-uppercase: a.btn.btn-outline-orange.btn-lg(href="#!") get in touch
