refactor(style): change scroll animation

--- a/src/scss/includes/_animation.scss
+++ b/src/scss/includes/_animation.scss
@@ -5,10 +5,10 @@
 @keyframes scroll {
   0%,
   100% {
-    opacity: 0;
+    opacity: .2;
   }
 
   50% {
-    opacity: 1;
+    opacity: .8;
   }
 }
