--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -1,7 +1,7 @@
 //- includes/sections/_hero.pug
 section#hero
   .hero-unit
-    .hero-content
+    .hero-content.clip-text.clip-bg
       h1.branding.mb-0 Adorade
-      //- p Web Design
+      h2.mb-0 Web Design
     include ../misc/_scroll-down
