--- a/src/scss/includes/_animation.scss
+++ b/src/scss/includes/_animation.scss
@@ -2,13 +2,15 @@
 // Animation
 // -----------------------------------------------------------------------------
 
+
+@keyframes letterspace {
+  0%,
+  100% { letter-spacing: -.025em; }
+  50% { letter-spacing: .025em; }
+}
+
 @keyframes scroll {
   0%,
-  100% {
-    opacity: .2;
-  }
-
-  50% {
-    opacity: .8;
-  }
+  100% { opacity: .2; }
+  50% { opacity: .8; }
 }
