perf(track): add gtag and open graph

--- a/src/views/partials/_opengraph.pug
+++ b/src/views/partials/_opengraph.pug
@@ -3,14 +3,14 @@
 // Schema.org markup for Google+
 meta(itemprop="name" content="Adorade - Web Design Company")
 meta(itemprop="description" content="Web development, web design, e-commerce, content managment system, internet and email marketing, seo, online advertising and promotion.")
-meta(itemprop="image" content="https://demo.adorade.ro/images/share/adorade_share_fb.jpg")
+meta(itemprop="image" content="https://adorade.ro/images/share/adorade_share_fb.jpg")
 
 //- OPEN GRAPH
 // Open Graph for Social Media
 meta(property="og:title" content="Adorade - Web Design Company")
 meta(property="og:type" content="website")
-meta(property="og:url" content="https://demo.adorade.ro/")
-meta(property="og:image" content="https://demo.adorade.ro/images/share/adorade_fb_share.jpg")
+meta(property="og:url" content="https://adorade.ro/")
+meta(property="og:image" content="https://adorade.ro/images/share/adorade_fb_share.jpg")
 meta(property="og:description" content="Once upon a time, we started a journey, to discover, to learn... beautiful things!")
 meta(property="fb:admins" content="564321858")
 meta(property="fb:app_id" content="161881187806327")
