--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -8,18 +8,15 @@ html(lang="en" itemscope itemtype="http://schema.org/LocalBusiness" prefix="og: 
     block head
       include ../partials/_head
       include ../partials/_statics
-      //- include ../partials/_opengraph
+      include ../partials/_opengraph
     block fonts
       include ../partials/_fonts
     block styles
       include ../partials/_styles
     block head-js
-      //- include ../partials/_tagmanager
-      //- include ../partials/_analytics
+      include ../partials/_analytics
 
   body
-    //- include ../partials/_facebook-sdk
-    //- include ../partials/_tagnoscript
     main
       block navbar
         include ../modules/drawer/_drawer
