perf(track): add Google Analytics track code

--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -14,12 +14,9 @@ html(lang="en" itemscope itemtype="http://schema.org/LocalBusiness" prefix="og: 
     block styles
       include ../partials/_styles
     block head-js
-      //- include ../partials/_tagmanager
-      //- include ../partials/_analytics
+      include ../partials/_analytics
 
   body
-    //- include ../partials/_facebook-sdk
-    //- include ../partials/_tagnoscript
     main
       block navbar
         include ../modules/drawer/_drawer
