refactor(tech): update tech section

--- a/src/views/includes/sections/_technologies.pug
+++ b/src/views/includes/sections/_technologies.pug
@@ -5,7 +5,7 @@ section.technologies.text-center#technologies
       .col-12
         h2.mb-4 Technologies we work with
     .row
-      .col-12
+      .col-lg-8.offset-lg-2
         .tech-logos
           img(alt="image" title="WordPress" src="images/tech/wordpress.svg")
           img(alt="image" title="php" src="images/tech/php.svg")
@@ -15,7 +15,6 @@ section.technologies.text-center#technologies
           img(alt="image" title="AngularJS" src="images/tech/angular.svg" style="opacity:0.25;")
           img(alt="image" title="NodeJS" src="images/tech/nodejs.svg" style="opacity:0.7;")
           img(alt="image" title="Firebase" src="images/tech/firebase.svg")
-          br
           img(alt="image" title="VueJS" src="images/tech/vue.svg" style="width:35px;")
           img(alt="image" title="Webpack" src="images/tech/webpack.svg")
           img(alt="image" title="ElectonJS" src="images/tech/electron.svg" style="opacity:0.5;")
