refactor(tags): update tags section

--- a/src/scss/components/_tags.scss
+++ b/src/scss/components/_tags.scss
@@ -36,9 +36,9 @@
     color: #fff;
   }
 
-  .browser {
-    background-color: #5b5ea6;
-    color: #fff;
+  .webpack {
+    background-color: #8ed6fb;
+    color: #111;
   }
 
   .pwa {
@@ -68,13 +68,13 @@
     background-color: #bc70a4;
   }
 
-  .devtools {
-    background-color: #ce3175;
+  .babel {
+    background-color: #323330;
+    color: #f5da55;
   }
 
-  .lab {
-    background-color: #95dee3;
-    color: #000;
+  .gulp {
+    background-color: #cf4647;
   }
 
   .services {
