--- a/src/views/modules/footer/_footer-tags.pug
+++ b/src/views/modules/footer/_footer-tags.pug
@@ -7,12 +7,12 @@
         a.button.node(href="#!") Node.js
         a.button.git(href="#!") Git
         a.button.network(href="#!") Network
-        a.button.browser(href="#!") Web Platform
+        a.button.webpack(href="#!") webpack
         a.button.react(href="#!") React
         a.button.vue(href="#!") Vue.js
         a.button.go(href="#!") Go
         a.button.js(href="#!") JavaScript
         a.button.css(href="#!") CSS
-        a.button.devtools(href="#!") DevTools
+        a.button.babel(href="#!") Babel
         a.button.services(href="#!") Services
-        a.button.lab(href="#!") Lab
+        a.button.gulp(href="#!") Gulp
