refactor(forms): update get-in-touch modal

--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -28,7 +28,7 @@ html(lang="en" itemscope itemtype="http://schema.org/LocalBusiness" prefix="og: 
       block footer
         include ../modules/footer/_footer
     block modal
-      include ../includes/modal/_quote
+      include ../includes/modal/_get-quote
     include ../includes/misc/_back-to-top
     block scripts
       include ../partials/_scripts
