--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,4 +21,5 @@
 @import "components/parallax";
 @import "components/tags";
 @import "components/footer";
+@import "components/modal";
 @import "components/misc";
