feat(rotator): add text rotator

--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -3,5 +3,10 @@ section#hero
   .hero-unit
     .hero-content.clip-text.clip-bg
       h1.branding.mb-0 Adorade
-      h2.mb-0 Web Design
+      #rotate
+        h2.mb-0 Web Design
+        h2.mb-0 Web Development
+        h2.mb-0 Mobile App Development
+        h2.mb-0 Web Applications
+        h2.mb-0 Smart Solutions
     include ../misc/_scroll-down
