fix(rotator): add rotate-text class

--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -4,9 +4,9 @@ section#hero
     .hero-content.clip-text.clip-bg
       h1.branding.mb-0 Adorade
       #rotate
-        h2.mb-0 Web Design
-        h2.mb-0 Web Development
-        h2.mb-0 Mobile App Development
-        h2.mb-0 Web Applications
-        h2.mb-0 Smart Solutions
+        h2.mb-0.rotate-text Web Design
+        h2.mb-0.rotate-text Web Development
+        h2.mb-0.rotate-text Mobile App Development
+        h2.mb-0.rotate-text Web Applications
+        h2.mb-0.rotate-text Smart Solutions
     include ../misc/_scroll-down
