refactor(cards): add new image for web app

--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -31,7 +31,7 @@ section.cards#cards
 
         .col-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            +cardsPicture("rotation_light_background_dark", "Web Applications")
+            +cardsPicture("sunset_sun_clouds", "Web Applications")
             .card-img-overlay.card-d-flex.position-relative
               h4.card-title Web Apps
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
