--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -6,7 +6,7 @@ section#hero
       #rotate
         h2.mb-0.rotate-text Web Design
         h2.mb-0.rotate-text Web Development
-        h2.mb-0.rotate-text Mobile App Development
+        h2.mb-0.rotate-text Mobile Development
         h2.mb-0.rotate-text Web Applications
         h2.mb-0.rotate-text Smart Solutions
     include ../misc/_scroll-down
