refactor(nav): remove sr-only class

--- a/src/views/includes/misc/_scroll-down.pug
+++ b/src/views/includes/misc/_scroll-down.pug
@@ -1,6 +1,5 @@
 //- includes/misc/_scroll-down.pug
 .scroll-down
   //- .scroller-text scroll down
-  .scroll-down-icon
-    span.sr-only Scroll down
+  .scroll-down-icon(aria-label="Scroll down")
     i.fas.fa-chevron-down.scroll
